src/components/styles/content.css
/* Typography */

@font-face {
    font-family: galaxus;
    src: url("../../fonts/galaxus.regular.otf") format("opentype");
    font-display: swap;
}

/* Main Content */

.textContainer {
    /* display: flex;
    justify-content: center;
    align-items: center; */
    z-index: 1000;
    position: absolute;
    width: 100%;
    /* margin-left: .5rem;
    margin-right: .5rem; */
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-shadow: .5px .5px 2px rgb(0, 0, 0), 0 0 1em #2568b4, 0 0 0.8em #2568b4;
}

#name {
    z-index: 1000;
    /* color: rgb(0, 183, 134); */
    color: white;
    font-size: 8rem;
    margin-bottom: 0;
    font-family: galaxus, 'Gill Sans',
        'Gill Sans MT',
        Calibri,
        'Trebuchet MS',
        sans-serif;

    ;
    letter-spacing: .3rem;
    line-height: 1;
    text-align: center;
}

#title {
    margin-top: 1rem;
    color: rgb(10, 10, 10);
    /* color: rgb(0, 183, 134); */
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    /* text-shadow: 1px 1px #000000; */
    /* text-shadow: none; */
    text-shadow: .5px .5px 2px rgb(0, 0, 0), 0 0 1em #2568b4, 0 0 0.8em #2568b4;

    text-align: center;
    font-weight: 400;
    font-size: 2.8rem;
}




/* Social Links */

.social {
    z-index: 2010;
    position: absolute;
    width: 100%;
    height: 100%;
    /* margin-left: .5rem;
    margin-right: .5rem; */
    top: calc(90% - 3rem);
    left: calc(90% - 3rem);
    /* transform: translate(-50%, -50%); */
    /* text-shadow: .5px .5px 2px rgb(0, 0, 0), 0 0 1em #2568b4, 0 0 0.8em #2568b4; */
}

#plus {
    width: 6rem;
    height: 6rem;
    opacity: 1;
}

.socialGit {
    z-index: 2009;
    position: absolute;
    width: 100%;
    height: 100%;
    top: calc(90% - 3rem);
    left: calc(90% - 3rem);
}

#git {
    width: 6rem;
    height: 6rem;
    opacity: 0;
}

.socialLI {
    z-index: 2008;
    position: absolute;
    width: 100%;
    height: 100%;
    top: calc(90% - 3rem);
    left: calc(90% - 3rem);
}

#linkedIn {
    width: 6rem;
    height: 6rem;
    opacity: 0;
}

.socialEmail {
    z-index: 2007;
    position: absolute;
    width: 100%;
    height: 100%;
    top: calc(90% - 3rem);
    left: calc(90% - 3rem);
}

#email {
    width: 6rem;
    height: 6rem;
    opacity: 0;
}





/* Nav Bar */

nav {
    z-index: 3000;
    position: relative;
    width: 100%;
    /* height: 10%; */
    left: 5%;
    top: 10%;
    font-size: 3rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: 500;
    color: white;
}

.navContainer {
    display: flex;
    list-style: none
}

li {
    padding-left: 3rem;
    opacity: .95;
}





/* Media Queries */

@media screen and (max-width: 1410px) {
    #title {
        font-size: 3.0rem;
    }

    #name {
        font-size: 7.5rem;
    }

    nav {
        left: 3%;
    }
}

@media screen and (max-width: 1100px) {
    #title {
        font-size: 3.0rem;
    }

    #name {
        font-size: 7.2rem;
    }

    nav {
        font-size: 2.5rem;
        left: 2%;
        top: 5%
    }

    .social {
        top: calc(85% - 2.75rem);
    }

    #plus {
        width: 5.5rem;
        height: 5.5rem;

    }
}

@media screen and (max-width: 825px) {
    #title {
        font-size: 2.6rem;
    }

    #name {
        font-size: 6.2rem;
    }



}

@media screen and (max-width: 630px) {
    #title {
        font-size: 2.7rem;
    }

    #name {
        font-size: 5.8rem;
    }
}

@media screen and (max-width: 590px) {
    #title {
        font-size: 2.7rem;
    }

    #name {
        font-size: 5.2rem;
    }
}


@media screen and (max-width: 420px) {
    #title {
        font-size: 2.4rem;
        line-height: 5px;
    }

    #name {
        font-size: 6.5rem;
    }
}

@media screen and (max-width: 390px) {
    #title {
        font-size: 2.2rem;
        line-height: .5
    }

    #name {
        font-size: 6.5rem;
    }
}

/* heights */

@media screen and (max-height: 850px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 6.5rem;
    }
}

@media screen and (max-height: 780px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 6.0rem;
    }
}

@media screen and (max-height: 760px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 5.5rem;
    }
}

@media screen and (max-height: 730px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 5.5rem;
    }
}

@media screen and (max-height: 660px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 4.5rem;
    }
}

@media screen and (max-height: 570px) {
    #title {
        font-size: 2.4rem;
    }

    #name {
        font-size: 4.0rem;
    }
}

@media screen and (max-height: 535px) {
    #title {
        font-size: 2.3rem;
    }

    #name {
        font-size: 3.5rem;
    }
}

@media screen and (max-height: 460px) {
    #title {
        font-size: 1.8rem;
    }

    #name {
        font-size: 3rem;
    }
}

